[package]
name = "canutils"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["net"] }
tokio-socketcan = { path = "../external/tokio-socketcan" }
futures-timer = "3.0"
futures-util = "0.3"
embedded-hal = "1.0.0-alpha.8"
anyhow = "1.0"
ctrlc = "3.2.2"
clap = {version = "3.2.8", features = ["derive"]}
nb = "1.0"
